--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_API_URL =https://mvvvip1.defas-fgi.de/mvv
+VITE_API_URL ='/api/mvv/XML_STOPFINDER_REQUEST?%20language=de&outputFormat=RapidJSON&type_sf=any'
